jdk downloader - reduce API surface
GitOrigin-RevId: e955f1cf4ae5fd2d5f7e230d3ca9512d073f2f65